[package]
name = "moonwave"
version = "0.1.0"
authors = ["eryn L. K. <eryn@eryn.io>"]
edition = "2018"

[lib]
name = "libmoonwave"
path = "src/lib.rs"

[[bin]]
name = "moonwave"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = "0.6.2" #{ path = "../full-moon/full-moon" }
walkdir = "2"
anyhow = "1.0.28"
regex = "1.4.1"
codespan-reporting = "0.9.5"
structopt = "0.3.18"