[package]
name = "moonwave"
description = "Moonwave is a tool for generating documentation from comments in Lua source code."
version = "1.3.0"
authors = ["eryn L. K. <eryn@eryn.io>"]
license = "MPL-2.0"
homepage = "https://eryn.io/moonwave/"
repository = "https://github.com/evaera/moonwave"
edition = "2021"

[lib]
name = "libmoonwave"
path = "src/lib.rs"

[[bin]]
name = "moonwave-extractor"
path = "src/main.rs"

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
full_moon = "1.2.0"
walkdir = "2.5.0"
anyhow = "1.0.86"
codespan-reporting = "0.11.1"
structopt = "0.3.26"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
pathdiff = "0.2.1"
fs-err = "3.0.0"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }

[features]
default = ["roblox"]
roblox = ["full_moon/roblox"]
